# python-project-lvl1

./: README.md  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  game_runner.py
brain_games/games/: base.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
